--- a/computer/vim/个人实战总结.md
+++ b/computer/vim/个人实战总结.md
@@ -1,24 +1,31 @@
 [TOC]
-# 文本全选
-ggVG
-# 文本复制
-复制到vim y
-复制到剪切板 "+y
 
-# 文本粘贴
-当前行 p
-下一行 P
-# 快速到行末
-第一个空格 g_
-无视空格 $
-# 快速到行头
-第一个 ^
-无视行头 0
-# 快速删除一行
-cc 直接进入插入模式
-dd 或者 Vd
-# 快速删除多行
-3dd等
-# 新开一行
-o 当前行下面
-O 当前行上面
+# 个人实战总结
+
+快捷键这个东西怎么说呢,我现在快速到行末行尾,十分熟练,小拇指操作上下左右键也十分熟悉.vim是类似的,只不过多了非常多的快捷键操作,外加上模式转换,初学的话十分不顺手.但你要清楚,平时写代码,快捷操作也用不了几个,将这些自己需要的,熟练掌握就足够了,以后再需要其他快捷操作的时候,再去查阅vim相关早错即可,根本没必要一次性全都掌握,一口难成胖子.
+
+另外,有些东西,会有很多操作方法,但我们只需要找到一个最顺手的,重复练习这一个操作即可,不用全都掌握,知道还能这么弄就行.
+
+
+
+# 情形1:打()后,指针在括号内,快速到括号外
+
+esc+shift+a  (以前就是fn+ ->)
+
+# 情形2:删除一行,指针在代码处
+
+esc+shift+s(删除空行+回溯指针,dd+S好使)
+
+# 情形3:复制上一行
+
+yyp
+
+# 情形4:重塑指针
+
+同情形2
+
+# 情形5:迅速新开一行
+
+下：o
+
+上:O
