--- a/computer/terminal/powershell/基本操作.md
+++ b/computer/terminal/powershell/基本操作.md
@@ -25,3 +25,19 @@ rmdir -Recurse
 # 5.查看当前路径文件
 
 ls/dir
+
+# 6.终端分屏
+
+alt shift D
+
+# 7.删除当前页面
+
+ctrl shift w
+
+# 8.切换分屏
+
+alt + 方向
+
+# 9.快速删除外界窗口
+
+ctrl + w
