--- a/computer/terminal/powershell/基本操作.md
+++ b/computer/terminal/powershell/基本操作.md
@@ -45,3 +45,15 @@ ctrl + w
 # 10.快速返回根目录
 
 cd \
+
+# 11.文件重命名
+Rename-Item "pre_name" "new_name"
+
+# 12.复制当前路径
+Get-Location | Set-Clipboard
+
+# 13.复制、剪切文件到指定路径
+Move-Item file1.txt -Destination newfolder\file1_new.txt
+
+
+
