--- a/computer/terminal/powershell/基本操作.md
+++ b/computer/terminal/powershell/基本操作.md
@@ -55,5 +55,8 @@ Get-Location | Set-Clipboard
 # 13.复制、剪切文件到指定路径
 Move-Item file1.txt -Destination newfolder\file1_new.txt
 
+# 14.切换vim语法与返回普通语法
+Set-PSReadLineOption -EditMode Vi
+Set-PSReadLineOption -EditMode Windows
 
 
