--- a/computer/vim/高级操作.md
+++ b/computer/vim/高级操作.md
@@ -5,3 +5,31 @@
 `\+word`
 `:set hlsearch` 显示高亮(默认有高亮)
 `:noh`去除高亮
+
+# 快速替换
+
+- 单行替换
+比如,将\替换成\\
+~~~bash
+:s #\\#\\\\#g
+~~~
+
+- 全文替换
+~~~bash
+:%s #\\#\\\\#g
+~~~
+
+# 分屏终端操作
+
+水平分屏 sp
+竖直分屏 vsp
+终端 term
+
+有组合命令,但是与个人习惯不符合,先不说了,分布操作就好
+
+终端中,使用A就是直接进入终端模式,跟平时没区别
+退出终端ctrl \,ctrl n,两步,:q 
+还有一个,不知道为啥用不了 ctrl w N
+
+切换屏幕.如果是同一个vim的buff,按住ctrl w后,按hjkl切换或再按次w.
+
