--- a/algorithm/machine-learning/线性回归/04 线性回归.ipynb
+++ b/algorithm/machine-learning/线性回归/04 线性回归.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "cell_id": "e00d31f2766d45be9c6d9fe9c4405f43",
     "deepnote_app_coordinates": {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "cell_id": "631dd97e9da843529d3b5cc29f08380c",
     "deepnote_app_coordinates": {
@@ -97,7 +97,7 @@
      "output_type": "stream",
      "text": [
       "回归系数： [ 6.50881254e-01  4.67222833e-01  3.38466198e-01  6.17275856e-03\n",
-      "  4.26857089e-01 -1.46033359e-14]\n",
+      "  4.26857089e-01 -1.46375967e-14]\n",
       "RMSE： 0.28791834247503534\n"
      ]
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "cell_id": "24bf3567aade4e37bb37b9ce1aa012ee",
     "deepnote_app_coordinates": {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "cell_id": "183cc001f0f346388b5b989a5a2f6e8a",
     "deepnote_app_coordinates": {
@@ -432,10 +432,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 6 7 5 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([2,4,5,6,7])\n",
+    "x = x[np.array([0, 3, 4, 2, 1])]\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
