--- a/algorithm/machine-learning/09深度学习/10 循环神经网络.ipynb
+++ b/algorithm/machine-learning/09深度学习/10 循环神经网络.ipynb
@@ -349,7 +349,7 @@
   "deepnote_execution_queue": [],
   "deepnote_notebook_id": "8d14356ac1854cb783c3ef14b7e3144b",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "AI",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
